--- a/app/src/main/res/layout/map_custom.xml
+++ b/app/src/main/res/layout/map_custom.xml
@@ -8,4 +8,17 @@
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <moises.com.custommap.map.marker.AnimateMarker
+        android:id="@+id/animate_marker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:id="@+id/btn_generate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:text="Generate" />
 </FrameLayout>
